# console

./: .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  clippy.yml  minver.yml  rustfmt.yml
examples/: alternate.rs  colors.rs  cursor_position.rs  gradient.rs  keyboard.rs  term.rs
src/: ansi.rs  common_term.rs  kb.rs  lib.rs  term.rs  unix_term.rs  utils.rs  wasm_term.rs  windows_term.rs  without_ansi.rs
src/windows_term/: bindings.rs  colors.rs  mod.rs
tests/: windows_bindings.rs
