[package]
name = "console"
description = "A terminal and console abstraction for Rust"
version = "0.14.1"
keywords = ["cli", "terminal", "colors", "console", "ansi"]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/mitsuhiko/console"
repository = "https://github.com/mitsuhiko/console"
documentation = "https://docs.rs/console"
readme = "README.md"

[features]
default = ["unicode-width", "ansi-parsing"]
windows-console-colors = ["ansi-parsing", "winapi-util"]
ansi-parsing = ["regex"]

[dependencies]
lazy_static = "1"
libc = "0.2"
terminal_size = "0.1.14"
regex = { version = "1.4.2", optional = true, default-features = false, features = ["std"] }
unicode-width = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winuser", "consoleapi", "processenv", "wincon"] }
winapi-util = { version = "0.1.3", optional = true }
encode_unicode = "0.3"
