[package]
name = "console"
description = "A terminal and console abstraction for Rust"
version = "0.15.2"
keywords = ["cli", "terminal", "colors", "console", "ansi"]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
license = "MIT"
edition = "2018"
homepage = "https://github.com/console-rs/console"
repository = "https://github.com/console-rs/console"
documentation = "https://docs.rs/console"
readme = "README.md"

[features]
default = ["unicode-width", "ansi-parsing"]
windows-console-colors = ["ansi-parsing", "regex", "winapi-util"]
ansi-parsing = []

[dependencies]
libc = "0.2.30"
terminal_size = "0.1.14"
regex = { version = "1.4.2", optional = true, default-features = false, features = ["std"] }
unicode-width = { version = "0.1", optional = true }
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winuser", "consoleapi", "processenv", "wincon"] }
winapi-util = { version = "0.1.3", optional = true }
encode_unicode = "0.3"

[dev-dependencies]
proptest = "1.0.0"
regex = "1.4.2"

## These are currently disabled.  If you want to play around with the benchmarks
## uncommit this.
#criterion = "0.3.5"
#[[bench]]
#name = "ansi_parser"
#harness = false
